--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>four-repo</title>
+    <title>four-repo</title> 
+    <link rel="style.css" alt="">
 </head>
 <body>
-    <h1>github a gitto</h1>
+    <h1>github.com a gitto</h1>
     <h2>prblm a ganjam</h2>
     <p>valo laga valo thaka</p>
-    
+
 </body>
 </html>
