--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>four-repo</title> 
-    <link rel="style.css" alt="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>github.com a gitto</h1>
     <h2>prblm a ganjam</h2>
     <p>valo laga valo thaka</p>
+    <img src="sayeed nor.jpg" alt="">
 
 </body>
 </html>
