--- a/index.htm
+++ b/index.htm
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>github.com a gitto</h1>
+    <h1>github.com a gitto again again</h1>
     <h2>prblm a ganjam</h2>
     <p>valo laga valo thaka</p>
     <img src="sayeed nor.jpg" alt="">
+    <img src="images/sayeed nor.jpg" alt="">
 
 </body>
 </html>
